--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <script src="HideSidebar.js"></script>
     <script src="DeleteColumn.js"></script>
     <script src="ChangeStatus.js"></script>
+    <script src="Items/RenderNavItems.js"></script>
+    <script src="Items/RenderSidebarItems.js"></script>
+    <script src="Items/RenderCoumn.js"></script>
+    <script src="Items/RenderTask.js"></script>
   </head>
   <body>
     <header>
       <nav id="main-nav">
-        <ul>
+        <ul id="inject">
           <li>
             <button>
               <i class="fas fa-th"></i>
@@ -36,41 +40,7 @@
               Jira
             </a>
           </li>
-          <li>
-            <select class="nav-item" id="yourwork">
-              <option value="">Your Work</option>
-            </select>
-          </li>
-          <li>
-            <select class="nav-item" id="project">
-              <option value="">Projects</option>
-            </select>
-          </li>
-          <li>
-            <select class="nav-item" id="filter">
-              <option value="">Filters</option>
-            </select>
-          </li>
-          <li>
-            <select class="nav-item" id="dashboard">
-              <option value="">DashBoards</option>
-            </select>
-          </li>
-          <li>
-            <select class="nav-item" id="team">
-              <option value="">Teams</option>
-            </select>
-          </li>
-          <li>
-            <select class="nav-item" id="plan">
-              <option value="">Plans</option>
-            </select>
-          </li>
-          <li>
-            <select class="nav-item" id="app">
-              <option value="">Apps</option>
-            </select>
-          </li>
+          <!-- Inject list of items here with RenderNavItems -->
           <li>
             <button class="create" id="createNav">Create</button>
           </li>
@@ -121,62 +91,7 @@
 
         <nav class="sidebar-nav">
           <ul class="sidebar-list">
-            <li>
-              <a class="sidebar-item" href="#">
-                <i class="fas fa-columns"></i
-                ><span>Scrum: Teams in S...Board</span>
-              </a>
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-stream"></i><span>Roadmap</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-clipboard-list"></i><span>Backlog</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item active" href="#"
-                ><i class="fas fa-tasks"></i><span>Active sprints</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-chart-bar"></i><span>Reports</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-exclamation-circle"></i><span>Issues</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-puzzle-piece"></i><span>Components</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-tags"></i><span>Releases</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-file-alt"></i><span>Project pages</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-plus-circle"></i><span>Add item</span></a
-              >
-            </li>
-            <li>
-              <a class="sidebar-item" href="#"
-                ><i class="fas fa-cog"></i><span>Project settings</span></a
-              >
-            </li>
+            <!-- Inject list of sidebar item here with RenderSidebarItems -->
           </ul>
         </nav>
       </aside>
@@ -205,52 +120,7 @@
           </div>
         </div>
         <div id="main-content">
-          <div class="column">
-            <div class="container-space-between">
-              <label for="">TO DO</label>
-              <i class="fas fa-trash-alt"></i>
-            </div>
-            <div class="task" draggable="true">
-              <textarea readonly name="" id="">
-Dec 19, 2024 — Em đăng nhập vào đúng mật khẩu đúng tên truy cập nhưng vẫn không đăng nhập vào được ạ. Bên wed báo em đăng nhập nhiều lần không thành công và bị</textarea
-              >
-              <div class="">
-                <span class="content-task"> SPACE TRAVEL PARTNERS </span>
-              </div>
-              <div class="footer-task">
-                <div class="">
-                  <i class="fas fa-check-square"> </i>
-                  <i class="fas fa-arrow-up"> </i>
-                  <span> 5 </span>
-                </div>
-                <span> TIS-26 </span>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="container-space-between">
-              <label for="">IN PROGRESS</label>
-              <i class="fas fa-trash-alt"></i>
-            </div>
-          </div>
-          <div class="column">
-            <div class="container-space-between">
-              <label for="">DEV COMPLETE</label>
-              <i class="fas fa-trash-alt"></i>
-            </div>
-          </div>
-          <div class="column">
-            <div class="container-space-between">
-              <label for="">TESTING</label>
-              <i class="fas fa-trash-alt"></i>
-            </div>
-          </div>
-          <div class="column">
-            <div class="container-space-between">
-              <label for="">DONE</label>
-              <i class="fas fa-trash-alt"></i>
-            </div>
-          </div>
+          <!-- Inject Column with RenderCoumn -->
         </div>
       </section>
     </main>
