--- a/Items/task.html
+++ b/Items/task.html
@@ -11,6 +11,9 @@ Dec 19, 2024 — Em đăng nhập vào đúng mật khẩu đúng tên truy cậ
       <i class="fas fa-arrow-up"> </i>
       <span> 5 </span>
     </div>
-    <span> TIS-26 </span>
+    <div>
+        <span> TIS-26 </span>
+        <i class="fas fa-user"></i>
+    </div>
   </div>
 </div>
