--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="navstyle.css" />
     <link rel="stylesheet" href="sidebarstyle.css" />
     <link rel="stylesheet" href="maincontentstyle.css" />
+    <link rel="stylesheet" href="taskstyle.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
