dispatch even for rendering task

--- a/Items/task.html
+++ b/Items/task.html
@@ -4,6 +4,7 @@ Dec 19, 2024 — Em đăng nhập vào đúng mật khẩu đúng tên truy cậ
   >
   <div class="">
     <span class="content-task"> SPACE TRAVEL PARTNERS </span>
+    <i class="fas fa-trash-alt"></i>
   </div>
   <div class="footer-task">
     <div class="">
