--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <script src="CreateColumn.js"></script>
-    <script src="HideSidebar.js"></script>
-    <script src="DeleteColumn.js"></script>
-    <script src="ChangeStatus.js"></script>
+    <script src="features/CreateColumn.js"></script>
+    <script src="features/HideSidebar.js"></script>
+    <script src="features/DeleteColumn.js"></script>
+    <script src="features/ChangeStatus.js"></script>
     <script src="Items/RenderNavItems.js"></script>
     <script src="Items/RenderSidebarItems.js"></script>
     <script src="Items/RenderCoumn.js"></script>
@@ -75,9 +75,7 @@
 
     <main>
       <aside id="sidebar">
-        <button id="toggle-sidebar">
-          <i class="fas fa-bars"></i>
-        </button>
+        
         <div class="container">
           <img
             alt="Teams in Space logo"
