--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <script src="features/CreateColumn.js"></script>
     <script src="features/HideSidebar.js"></script>
-    <script src="features/DeleteColumn.js"></script>
+    <script src="features/Delete.js"></script>
     <script src="features/ChangeStatus.js"></script>
     <script src="Items/RenderNavItems.js"></script>
     <script src="Items/RenderSidebarItems.js"></script>
