--- a/Items/task.html
+++ b/Items/task.html
@@ -4,10 +4,10 @@ Dec 19, 2024 — Em đăng nhập vào đúng mật khẩu đúng tên truy cậ
   >
   <div class="">
     <span class="content-task"> SPACE TRAVEL PARTNERS </span>
-    <i class="fas fa-trash-alt"></i>
+    <i class="fas fa-trash-alt trash-task"></i>
   </div>
   <div class="footer-task">
-    <div class="">
+    <div>
       <i class="fas fa-check-square"> </i>
       <i class="fas fa-arrow-up"> </i>
       <span> 5 </span>
