--- a/Items/column.html
+++ b/Items/column.html
@@ -1,6 +1,9 @@
 <div class="column">
   <div class="container-space-between">
     <label></label>
-    <i class="fas fa-trash-alt trash-column"></i>
+    <div>
+        <i class="fas fa-plus"></i>
+        <i class="fas fa-trash-alt trash-column"></i>
+    </div>
   </div>
 </div>
