--- a/Items/nav-item.html
+++ b/Items/nav-item.html
@@ -1,5 +1,5 @@
 <li>
   <select class="nav-item" id="">
-    <option value="" disabled selected></option>
+    <option value="">NEW</option>
   </select>
 </li>
